--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ flutter:
    - images/backer_0004.jpg
    - images/backer_0005.jpg
    - images/backer_0006.jpg
+   - images/fundo_0001.jpg
+   - images/fundo_0002.jpg
+   - images/fundo_0003.jpg
+   - images/fundo_0004.jpg
+   - images/fundo_0005.png
+   - images/fundo_0006.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
