--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ flutter:
      fonts:
        - asset: fonts/Lobster-Regular.ttf
          style: italic
+   - family: Poppins
+     fonts:
+       - asset: fonts/Poppins-SemiBold.ttf
+         weight: 600
+       - asset: fonts/Poppins-Regular.ttf
+         weight: 400
 #   - family: Trajan Pro
 #     fonts:
 #       - asset: fonts/TrajanPro.ttf
