--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   firebase_messaging: ^1.0.4
+  sqflite: any
 
 dev_dependencies:
   flutter_test:
