--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,17 @@ dependencies:
   smooth_star_rating: 1.0.1
   fluttertoast: ^2.1.1
   progress_hud: ^1.1.0
+  flutter_launcher_icons: "^0.7.0"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/eu-amo-pao-icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
