--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   progress_hud: ^1.1.0
   flutter_launcher_icons: "^0.7.0"
   money: ^0.2.1
+  url_launcher: ^4.0.2
 
 dev_dependencies:
   flutter_test:
