--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   progress_hud: ^1.1.0
   flutter_launcher_icons: "^0.7.0"
   money: ^0.2.1
-  url_launcher: ^4.0.2
+  url_launcher: ^3.0.3
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +57,7 @@ flutter:
    - images/fundo_0006.jpg
    - images/eu_amo_pao.png
    - images/eu_amo_pao_v2.png
+   - images/avatar_default.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
