--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_launcher_icons: "^0.7.0"
   money: ^0.2.1
   url_launcher: ^3.0.3
+  package_info: ^0.3.2
+  geolocator: '^2.1.1'
+  device_info: ^0.3.0
 
 dev_dependencies:
   flutter_test:
